--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <li>ALL</li>
                     <li>APP</li>
                     <li>CARD</li>
-                    <li>WEB</li>
+                    <li>WEB.</li>
                 </ul>
             </div>
             <div>
